--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,7 +79,8 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.0"
+    "zod": "^3.24.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -94,6 +95,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "shadcn": "^3.5.0",
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.8.2",
