--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,11 +52,13 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@xyflow/react": "^12.9.3",
     "ai": "^5.0.93",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -67,6 +69,8 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
+    "nanoid": "^5.1.6",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
@@ -78,9 +82,13 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "server-only": "^0.0.1",
+    "shiki": "^3.15.0",
     "sonner": "^2.0.7",
+    "streamdown": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
     "zod": "^3.24.0",
     "zustand": "^5.0.8"
