--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
+    "postinstall": "node scripts/copy-pdf-worker.mjs",
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit"
@@ -74,6 +75,7 @@
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.394",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.1",
