"Add scaffold test UI with agent processing pipeline"

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,6 @@ deploy_ec2.ps1
 deploy_simple.ps1
 quick_deploy.ps1
 openapi-temp.json
+
+# Deployment guides with sensitive info
+backend/DEPLOY_SCAFFOLD_TEST_UI.md
