--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ pydantic-settings==2.1.0
 replicate==0.22.0
 httpx==0.26.0
 openai==1.54.0
+google-generativeai==0.8.3
 
 # Image Processing
 pillow==10.4.0
