--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -12,7 +12,7 @@ AUTH_GOOGLE_SECRET=YOUR_GOOGLE_CLIENT_SECRET
 DATABASE_URL=postgresql://neondb_owner:YOUR_PASSWORD@ep-falling-meadow-adnv9yz9-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # Replicate
-REPLICATE_API_TOKEN=
+REPLICATE_API_KEY=
 
 # Node Environment
 NODE_ENV=development
