change agent 3 to use llm for creating dynamic json data

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,10 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 # Get from https://replicate.com/account/api-tokens
 REPLICATE_API_KEY=YOUR_REPLICATE_API_KEY
 
+# Get from https://platform.openai.com/api-keys
+# Used for TTS audio generation and LLM-powered base scene generation
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+
 # AWS S3 Configuration
 # Note: For ECS deployment, these are set in the task definition
 # For local development, you can use IAM credentials
